# FireMonkeyStudio

./: .gitignore  CMakeLists.txt  FMS.pro  FMS.pro.user.a6494ba  LICENSE  Makefile  README.md
IDE/: CMakeLists.txt  IDE.pro  Makefile  Makefile.Debug  Makefile.Release  fms_plugin_import.cpp  icons.qrc  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  ui_Form_About.h  ui_Form_Beginui.h  ui_Form_CompletionTip.h  ui_Form_Content.h  ui_Form_Editor.h  ui_Form_Index.h  ui_Form_ListPrint.h  ui_Form_New.h  ui_Form_PluginManger.h  ui_Form_ProjectManger.h  ui_Form_Search.h  ui_Form_SearchList.h  ui_Form_Start.h  ui_Form_SystemSettings.h  ui_Form_TextPrint.h  ui_Form_TipManger.h  ui_Form_VisualFolder.h  ui_Form_WidgetBox.h  ui_Form_WindowTab.h  ui_Form_WorkSpace.h  ui_Form_settings_Basic.h  ui_Form_settings_Color.h  ui_Form_settings_Compile.h  ui_Form_settings_DataBase.h  ui_Form_settings_Device.h  ui_Form_settings_Git.h  ui_Form_settings_ProjectManger.h  (+13 more)
IDE/.qtc_clangd/: compile_commands.json
IDE/CodeEditor/: CodeEditor.cpp  CodeEditor.h
IDE/InterFace/: InterFace_CompletionTip.h
IDE/Plugin/: Plugin_Base.cpp  Plugin_Base.h  Plugin_CodeEditorInterface.cpp  Plugin_CodeEditorInterface.h  Plugin_Funs.cpp  Plugin_Funs.h  Plugin_Global.cpp  Plugin_Global.h  Plugin_Manger.cpp  Plugin_Manger.h
IDE/RunConfig/config/: plugin.ini  proHisList.ini  runmod.bat
IDE/SwSystem/: System_CodeEditorManger.cpp  System_CodeEditorManger.h  System_GlobalVar.cpp  System_GlobalVar.h  System_History.cpp  System_History.h  System_SystemSetting.cpp  System_UtilFun.cpp  System_UtilFun.h  System_envVar.cpp  System_envVar.h  system_systemsetting.cpp  system_systemsetting.h
IDE/Widget/: Widget_Button_CompletionItem.cpp  Widget_Button_CompletionItem.h  Widget_Button_CompletionItem.ui  Widget_Button_HistoryItem.cpp  Widget_Button_HistoryItem.h  Widget_Button_HistoryItem.ui  Widget_Button_ListItem.cpp  Widget_Button_ListItem.h  Widget_Button_ListItem.ui  Widget_Button_ModHistoryItem.cpp  Widget_Button_ModHistoryItem.h  Widget_Button_ModHistoryItem.ui  Widget_Button_ModItem.cpp  Widget_Button_ModItem.h  Widget_Button_ModItem.ui  Widget_Button_PluginItem.cpp  Widget_Button_PluginItem.h  Widget_Button_PluginItem.ui  Widget_Button_Start.cpp  Widget_Button_Start.h  Widget_Button_Start.ui  Widget_Button_WidgetItem.ui  Widget_HistoryList.cpp  Widget_HistoryList.h  Widget_HistoryList.ui  Widget_Statusbar.cpp  Widget_Statusbar.h  Widget_Statusbar.ui  Widget_TipItem.cpp  Widget_TipItem.h  Widget_TipItem.ui
IDE/Window/: Form_About.cpp  Form_About.h  Form_About.ui  Form_Begin.cpp  Form_Begin.h  Form_Beginui.ui  Form_CompletionTip.cpp  Form_CompletionTip.h  Form_CompletionTip.ui  Form_Content.cpp  Form_Content.h  Form_Content.ui  Form_Editor.cpp  Form_Editor.h  Form_Editor.ui  Form_Index.cpp  Form_Index.h  Form_Index.ui  Form_ListPrint.cpp  Form_ListPrint.h  Form_ListPrint.ui  Form_New.cpp  Form_New.h  Form_New.ui  Form_PluginManger.cpp  Form_PluginManger.h  Form_PluginManger.ui  Form_ProjectManger - 副本.h  Form_ProjectManger - 副本.ui  Form_ProjectManger.cpp  Form_ProjectManger.h  Form_ProjectManger.ui  Form_Search.cpp  Form_Search.h  Form_Search.ui  Form_SearchList.cpp  Form_SearchList.h  Form_SearchList.ui  Form_Start.cpp  Form_Start.h  (+21 more)
IDE/Window/settingWindow/: Form_settings_Basic.cpp  Form_settings_Basic.h  Form_settings_Basic.ui  Form_settings_Color.cpp  Form_settings_Color.h  Form_settings_Color.ui  Form_settings_Compile.cpp  Form_settings_Compile.h  Form_settings_Compile.ui  Form_settings_DataBase.cpp  Form_settings_DataBase.h  (+13 more)
IDE/android/: AndroidManifest.xml
IDE/module/: mod_HeighLightEditor.h  mod_TipList.h  mod_WebPage.cpp  mod_WebPage.h  mod_settingsFormBase.cpp  mod_settingsFormBase.h
IDE/release/: moc_CodeEditor.cpp  moc_Form_About.cpp  moc_Form_Begin.cpp  moc_Form_Content.cpp  moc_Form_Editor.cpp  moc_Form_Index.cpp  moc_Form_ListPrint.cpp  moc_Form_New.cpp  moc_Form_PluginManger.cpp  moc_Form_ProjectManger.cpp  moc_Form_Search.cpp  moc_Form_SearchList.cpp  moc_Form_Start.cpp  moc_Form_SystemSettings.cpp  moc_Form_TextPrint.cpp  moc_Form_TipManger.cpp  moc_Form_VisualFolder.cpp  moc_Form_WidgetBox.cpp  moc_Form_WindowTab.cpp  moc_Form_WorkSpace.cpp  moc_Form_settings_Basic.cpp  moc_Form_settings_Color.cpp  moc_Form_settings_Compile.cpp  moc_Form_settings_DataBase.cpp  moc_Form_settings_Device.cpp  moc_Form_settings_Git.cpp  moc_Form_settings_ProjectManger.cpp  moc_Form_settings_Qt.cpp  moc_Widget_Button_HistoryItem.cpp  moc_Widget_Button_ListItem.cpp  moc_Widget_Button_ModHistoryItem.cpp  moc_Widget_Button_ModItem.cpp  moc_Widget_Button_PluginItem.cpp  moc_Widget_Button_Start.cpp  moc_Widget_Button_WidgetItem.cpp  moc_Widget_HistoryList.cpp  moc_Widget_Statusbar.cpp  moc_Widget_TipItem.cpp  moc_mainwindow.cpp  moc_mod_WebPage.cpp  (+3 more)
IDE/res/: README.txt  ThemeTemplate.txt
Plugin/: CMakeLists.txt  Makefile  Plugin.pro
Plugin/Plugin_CppBase/: CMakeLists.txt  Plugin_CppBase.cpp  Plugin_CppBase.h  Plugin_CppBase.pro  Plugin_CppBase_global.h  res.qrc
Plugin/Plugin_IdeBase/: CMakeLists.txt  Plugin_IdeBase.pro  plugin_IdeBase_global.h  res.qrc
Plugin/plugin_CppBasic/: Makefile  plugin_CppBasic.pro  plugin_CppBasic.pro.user.67c8aba
Plugin/plugin_GccBuild/: .qmake.stash  Form_CheckGCC.cpp  Form_CheckGCC.h  Form_CheckGCC.ui  Makefile  Makefile.Debug  Makefile.Release  plugin_GccBuild.pro  plugin_GccBuild.pro.user.67c8aba  plugin_GccBuild_global.h  plugin_gccbuild.cpp  plugin_gccbuild.h  res.qrc  ui_Form_CheckGCC.h
Plugin/plugin_IdeBase/: Plugin_IdeBase.cpp  Plugin_IdeBase.h  Plugin_IdeBase.pro  plugin_IdeBase.pro  res.qrc
Plugin/plugin_UixEditor/: Makefile  Makefile.Debug  Makefile.Release  plugin_UixEditor.pro  plugin_UixEditor_global.h  plugin_uixeditor.cpp  plugin_uixeditor.h  res.qrc  ui_Form_EditorSpace.h  ui_Form_WidgetBox.h  ui_Widget_Button_WidgetItem.h
Plugin/plugin_ideBasic/: Makefile  Makefile.Debug  Makefile.Release  Plugin_ideBasic.cpp  Plugin_ideBasic.h  icons.qrc  plugin_ideBasic.pro  plugin_ideBasic.pro.user.67c8aba  plugin_ideBasic_global.h  res.qrc
(+7670 files in other folders)
